--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 		}
 
 		section {
-			padding: 40px;
+			padding: 5vw 10vw;
 			min-height: 50vh;
 			/* Center Vertically */
 			display: flex;
@@ -134,7 +134,9 @@
 
 	<section>
 		<h2>How Does Scoring Work?</h2>
-		<p>Scores are calculated weekly based on 311 requests. Completed 311 requests are worth +1 points and unfulfilled requests are worth -1 points. Here are the types of issues we score on:</p>
+		<p>Scores are calculated weekly based on 311 requests.</p>
+		<p>Completed 311 requests are worth +1 points and unfulfilled requests are worth -1 points.</p>
+		<p>Here are the types of issues we score on:</p>
 		<h3>Ward <span id="your-ward-number"></span> Scoring Breakdown</h3>
 		<ul id="ward-score-breakdown"></ul>
 		<p>Your alderman doesn't directly deal with these issues, but this is a fun way to see how your ward responds to citizen requests.</p>
