Show score week

--- a/index.html
+++ b/index.html
@@ -152,13 +152,14 @@
 	<section>
 		<h2>Try it Out!</h2>
 		<p>When deciding your starting lineup, you see historical scores. Here are some aldermen and their scores for the first week of <span class="insert-month"></span>. Choose the three aldermen who you think will score the most points in the second week of <span class="insert-month"></span>.</p>
+		<h3>Scores from the Week of <span id="insert-past-week"></span></h3>
 		<div class="center-horizontal">
 			<div class="roster">
-				<h4>Your Roster</h4>
+				<h4>Your Team</h4>
 				<table id="visitor-roster"></table>
 			</div>
 			<div class="roster">
-				<h4>Opponent's Roster</h4>
+				<h4>Opponent's Teams</h4>
 				<table id="robot-roster"></table>
 			</div>
 		</div>
@@ -169,6 +170,7 @@
 	<section id="game-result">
 		<h2>Sample Game Results</h2>
 		<p id="demo-outcome" class="center-text"></p>
+		<h3>Scores from the Week of <span id="insert-next-week"></span></h3>
 		<div class="center-horizontal">
 			<div class="roster">
 				<h4>Your Scores</h4>
