--- a/index.html
+++ b/index.html
@@ -54,6 +54,9 @@
 		section {
 			padding: 5vw 10vw;
 			min-height: 50vh;
+		}
+
+		section.landing-pane {
 			/* Center Vertically */
 			display: flex;
 			flex-direction: column;
@@ -106,6 +109,25 @@
 			margin: 10px auto;
 		}
 
+		img#splash-logo {
+			width: 250px;
+		}
+
+		div.splash-pane {
+			display: inline-block;
+			vertical-align: middle;
+			text-align: center;
+			margin: 20px 10px;
+		}
+
+		div.splash-pane:nth-child(1) {
+			width: 300px;
+		}
+
+		div.splash-pane:nth-child(2) {
+			width: 250px;
+		}
+
 		</style>
 
 	</head>
@@ -113,26 +135,33 @@
 		
 		<!-- Header -->
 
-	<section>
-		<h1>Fantasy Civics</h1>
-		<p class="center-text">Fantasy Civics is a Fantasy Football-style game to encourage players to learn more about wards and alderman in Chicago.</p>
+	<section class="landing-pane">
+		<div class="center-horizontal">
+			<div class="splash-pane">
+				<h1>Fantasy Civics</h1>
+				<p class="center-text">Fantasy Civics is a Fantasy Football-style game to encourage players to learn more about wards and alderman in Chicago.</p>
+			</div>
+			<div class="splash-pane">
+				<img id="splash-logo" src="assets/logo-white.png">
+			</div>
+		</div>
 	</section>
 
-	<section>
+	<section class="landing-pane">
 		<h2>Who is My Alderman?</h2>
 		<p class="center-text">Enter your address to find out:</p>
 		<input type="text" id="search-by-address" value="3300 S Federal Street">
 		<button id="search-by-button" class="cta-btn">Search</button>
 	</section>
 
-	<section id="alderman-result">
+	<section class="landing-pane" id="alderman-result">
 		<h2>Your Alderman Is...</h2>
 		<h1 id="your-alderman">...</h1>
 		<h4 id="your-ward">...</h4>
 		<p class="center-text">...and last week in Fantasy Civics, they scored <span id="your-alderman-score">0</span> points.</p>
 	</section>
 
-	<section>
+	<section class="landing-pane">
 		<h2>How Does Scoring Work?</h2>
 		<p>Scores are calculated weekly based on 311 requests.</p>
 		<p>Completed 311 requests are worth +1 points and unfulfilled requests are worth -1 points.</p>
@@ -142,14 +171,14 @@
 		<p>Your alderman doesn't directly deal with these issues, but this is a fun way to see how your ward responds to citizen requests.</p>
 	</section>
 
-	<section>
+	<section class="landing-pane">
 		<h2>How Does the Game Work?</h2>
 		<p>You form a league with your friends and play multiple matches against each other.</p>
 		<p>Each player selects a team of alderman and is then matched up with an opponent to see whose team scores more points. You can have up to five alderman on your team, but only three can be starters.</p>
-		<p>The full game uses all 50 Chicago aldermen: you can acquire aldermen other than those shown above and trade with other players.</p>
+		<p>The full game uses all 50 Chicago aldermen: you can acquire aldermen other than those shown here and trade with other players.</p>
 	</section>
 
-	<section>
+	<section class="landing-pane">
 		<h2>Try it Out!</h2>
 		<p>When deciding your starting lineup, you see historical scores. Here are some aldermen and their scores for the first week of <span class="insert-month"></span>. Choose the three aldermen who you think will score the most points in the second week of <span class="insert-month"></span>.</p>
 		<h3>Scores from the Week of <span id="insert-past-week"></span></h3>
@@ -167,7 +196,7 @@
 		<button id="submit-roster" class="cta-btn">Who Wins?</button>
 	</section>
 
-	<section id="game-result">
+	<section class="landing-pane" id="game-result">
 		<h2>Sample Game Results</h2>
 		<p id="demo-outcome" class="center-text"></p>
 		<h3>Scores from the Week of <span id="insert-next-week"></span></h3>
@@ -183,13 +212,13 @@
 		</div>
 	</section>
 
-	<section>
+	<section class="landing-pane">
 		<h2>Play Fantasy Civics</h2>
 		<p class="center-text">Now you know how to play Fantasy Civics! Get some friends, you can play a full game in 15 minutes!</p>
 		<button class="cta-btn play-game">Play Now</button>
 	</section>
 
-	<section>
+	<section class="landing-pane">
 		<h2>Frequently Asked Questions</h2>
 		<h4>How do you win?</h4>
 		<p>You win the game by picking a team of high-scoring aldermen and winning the most matches in your league. You win in real life by learning about Chicago wards and getting involved in civics!</p>
