--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="icon" sizes="192x192" href="favicon.ico">
-		<link rel="image_src" href="assets/logo-color.png">
+		<link rel="image_src" href="assets/logo-colorπ.png">
 		<title>Fantasy Civics</title>
 
 		<script src="https://www.gstatic.com/firebasejs/3.6.9/firebase.js"></script>
