--- a/index.html
+++ b/index.html
@@ -2,10 +2,16 @@
 <html>
 	<head>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta name="keywords" content="fantasy, civics, football, sports, chicago, city, ward, alderman, aldermen, 311, graffiti, pot holes, rodent baiting">
+		<meta name="description" content="A Fantasy Football-style game about Chicago city leaders.">
+		<meta name="apple-mobile-web-app-capable" content="yes">
+		<meta name="mobile-web-app-capable" content="yes">
+		<meta property="og:title" content="Fantasy Civics">
+		<meta property="og:description" content="A Fantasy Football-style game about Chicago city leaders.">
+		<meta property="og:image" content="https://geliclub.github.io/fantasycivics/assets/logo-color.png">
 		<link rel="icon" sizes="192x192" href="favicon.ico">
-		<link rel="image_src" href="assets/logo-colorπ.png">
+		<link rel="image_src" href="assets/logo-color.png">
 		<title>Fantasy Civics</title>
-
 		<script src="https://www.gstatic.com/firebasejs/3.6.9/firebase.js"></script>
 		<script type="text/javascript" src="./assets/promise.min.js"></script>
 		<script type="text/javascript" src="./assets/moment.min.js"></script>
