--- a/app/roster.html
+++ b/app/roster.html
@@ -19,7 +19,7 @@
 		<a href="app.html">App</a>
 		<a href="#">Roster</a>
 		<button id="outcome" onclick="roster.viewOutcome();">View Match</button>
-		<button onclick="roster.setMatchOutcome()">Finalize Match</button>
+		<button id="setmatch" onclick="roster.setMatchOutcome()">Finalize Match</button>
 
 		<h2>User Info</h2>
 		<div>
@@ -27,7 +27,7 @@
 			<p id="email"></p>
 			<p id="name"></p>
 			<!-- <img id="image" style="width:64px;height:64px;" alt="No Image"></img> -->
-			<button onclick="roster.userLogout()">Logout</button>
+			<button id="logout" onclick="roster.userLogout()">Logout</button>
 		</div>
 
 		<div id="userRoster">
