--- a/app/app.html
+++ b/app/app.html
@@ -30,7 +30,7 @@
 			<p id="email"></p>
 			<p id="name"></p>
 			<!-- <img id="image" style="width:64px;height:64px;" alt="No Image"></img> -->
-			<button onclick="app.userLogout()">Logout</button>
+			<button id="logout" onclick="app.userLogout()">Logout</button>
 		</div>
 
 		<h2>Create Leagues</h2>
