--- a/app/index.html
+++ b/app/index.html
@@ -31,12 +31,12 @@
 			<p id="email"></p>
 			<p id="name"></p>
 			<!-- <img id="image" style="width:64px;height:64px;" alt="No Image"></img> -->
-			<button onclick="app.userLogout()">Logout</button>
+			<button id="logout" onclick="app.userLogout()">Logout</button>
 		</div>
 		
 		<h2>Login</h2>
 
-		<button onclick="app.userLogin()">Login with Google</button>
+		<button id="authenticate" onclick="app.userLogin()">Login with Google</button>
 
 		<!-- Footer -->
 
