Add scouting library

--- a/index.html
+++ b/index.html
@@ -262,6 +262,7 @@
 		<script type="text/javascript" src="./database/auth.js"></script>
 		<script type="text/javascript" src="./database/database.js"></script>
 		<script type="text/javascript" src="findmyward.js"></script>
+		<script type="text/javascript" src="./lib/scouting.js"></script>
 		<script type="text/javascript" src="home.js"></script>
 		<script type="text/javascript">
 
