Attach range to scouting report

--- a/index.html
+++ b/index.html
@@ -151,6 +151,14 @@
 			line-height: 20px;
 		}
 
+		.has-scouting-report {
+			font-weight: bold;
+		}
+
+		.has-scouting-report:hover {
+			cursor: pointer;
+		}
+
 		</style>
 
 	</head>
