--- a/index.html
+++ b/index.html
@@ -17,6 +17,12 @@
 		<script type="text/javascript" src="./assets/moment.min.js"></script>
 		<script type="text/javascript" src="./assets/jquery-3.1.1.min.js"></script>
 		<link href="https://fonts.googleapis.com/css?family=Roboto:400,900" rel="stylesheet">
+		<!-- Vex Assets -->
+		<script type="text/javascript" src="assets/vex.combined.min.js"></script>
+		<script type="text/javascript">vex.defaultOptions.className = 'vex-theme-plain';</script>
+		<link rel="stylesheet" type="text/css" href="assets/vex.css">
+		<link rel="stylesheet" type="text/css" href="assets/vex-theme-plain.css">
+		<!-- Styles -->
 		<link rel="stylesheet" type="text/css" href="app/reset.css">
 		<link rel="stylesheet" type="text/css" href="app/temp-style.css">
 		<style>
