Round score projections

--- a/index.html
+++ b/index.html
@@ -165,6 +165,11 @@
 			cursor: pointer;
 		}
 
+		.projected-score {
+			color: rgba(44, 140, 153, 1);
+			font-style: italic;
+		}
+
 		</style>
 
 	</head>
