Move sumScores to scouting module

--- a/index.html
+++ b/index.html
@@ -224,6 +224,7 @@
 		<h2>Try it Out!</h2>
 		<p>When deciding your starting lineup, you see historical scores. Here are some aldermen and their scores for the first week of <span class="insert-month"></span>. Choose the three aldermen who you think will score the most points in the second week of <span class="insert-month"></span>.</p>
 		<h3>Scores from the Week of <span id="insert-past-week"></span></h3>
+		<p class="center-text">Click on a player to view their historical scores.</p>
 		<div class="center-horizontal">
 			<div class="roster">
 				<h4>Your Team</h4>
@@ -241,6 +242,7 @@
 	<section class="landing-pane" id="game-result">
 		<h2>Sample Game Results</h2>
 		<p id="demo-outcome" class="center-text"></p>
+		<p class="center-text">Click on a player to compare their actual scores to the projections.</p>
 		<h3>Scores from the Week of <span id="insert-next-week"></span></h3>
 		<div class="center-horizontal">
 			<div class="roster">
