added comments for automation testing and fixed index page user info

--- a/app/app.html
+++ b/app/app.html
@@ -59,8 +59,8 @@
 
 			// Instantiate app
 			var app = InitApplication();
-			app.checkUser(); // getUser() => true or false based on data cached or not
-			app.displayUser(); // displayUser() => modify html DOM to show users infomation if there are user infos
+			if (app.checkUser()) // getUser() => true or false based on data cached or not
+				app.displayUser(); // displayUser() => modify html DOM to show users infomation if there are user infos
 			app.displayUserLeagues(); // displays all the leagues one user is a part of
 
 		</script>
