--- a/app/index.html
+++ b/app/index.html
@@ -27,7 +27,7 @@
 
 		<h2>User Info</h2>
 		<div>
-			<p id="userid"></p>
+			<!-- <p id="userid"></p> -->
 			<p id="email"></p>
 			<p id="name"></p>
 			<!-- <img id="image" style="width:64px;height:64px;" alt="No Image"></img> -->
@@ -52,7 +52,10 @@
 		<script type="text/javascript">
 			// Instantiate app
 			var app = InitApplication();
-			app.getUser();
+			if (app.checkUser()) {
+				app.displayUser();
+			}
+			
 		</script>
 	</body>
 </html>
