Toggle table and graph

--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
 		<script type="text/javascript">vex.defaultOptions.className = 'vex-theme-plain';</script>
 		<link rel="stylesheet" type="text/css" href="assets/vex.css">
 		<link rel="stylesheet" type="text/css" href="assets/vex-theme-plain.css">
+		<!-- Plotly -->
+		<script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
 		<!-- Styles -->
 		<link rel="stylesheet" type="text/css" href="app/reset.css">
 		<link rel="stylesheet" type="text/css" href="app/temp-style.css">
