Attach player scouting reports to any div

--- a/index.html
+++ b/index.html
@@ -228,6 +228,7 @@
 		<h3>Ward <span id="your-ward-number"></span> Scoring Breakdown</h3>
 		<ul id="ward-score-breakdown"></ul>
 		<p>Your alderman doesn't directly deal with these issues, but this is a fun way to see how your ward responds to citizen requests.</p>
+		<p>You can also see an alderman's historical fantasy scores. <span id="your-alderman-historical" class="scout-anchor" data-pid="playerid0001">Try it here</span>.</p>
 	</section>
 
 	<section class="landing-pane">
