--- a/app/roster.html
+++ b/app/roster.html
@@ -28,9 +28,67 @@
 				cursor: pointer;
 			}
 
+			div#loading {
+				position: absolute;
+				top: 0;
+				left: 0;
+				width: 100vw;
+				height: 100vh;
+				background: rgba(44, 140, 153, 1);
+				color: white;
+				/* Center Vertically */
+				display: flex;
+				flex-direction: column;
+				justify-content: center;
+				resize: vertical;
+			}
+
+			@keyframes LoadingPulse {
+				0% {
+					width: 25vh;
+				}
+				50% {
+					width: 30vh;
+				}
+				100% {
+					width: 25vh;
+				}
+			}
+
+			div#loading div {
+				height: 35vh;
+				/* Center Vertically */
+				display: flex;
+				flex-direction: column;
+				justify-content: center;
+				resize: vertical;
+			}
+
+			div#loading div img {
+				width: 50vw;
+				display: block;
+				margin: 0 auto;
+				animation: LoadingPulse 2s infinite;
+			}
+
+			div#roster-page {
+				display: none;
+				padding: 20px;
+			}
+
         </style>
 	</head>
 	<body>
+
+		<div id="loading">
+			<div>
+				<img src="../assets/logo-white.png">
+			</div>
+			<h1>Loading Fantasy Civics...</h1>
+		</div>
+
+		<div id="roster-page">
+
 		<h1>Roster</h1>
 		<p>Insert roster page, and fancy tables</p>
 		<a href="index.html">Home</a>
@@ -48,14 +106,15 @@
 			<button onclick="app.userLogout()">Logout</button>
 		</div>
 
+
 		<div id="userRoster">
 			<h3>{{ leaguename }}</h3>
-			<p>Choose two consecutive players to swap from benching and starting in your roster</p>
+			<p>Choose two consecutive players to swap from benching and starting in your roster.</p>
 			<table>
 				<tr>
 					<th>Players</th><th>{{ headers[Object.keys(headers)[0]] }}</th><th>{{ headers[Object.keys(headers)[1]] }}</th><th>{{ headers[Object.keys(headers)[2]] }}</th><th>Score</th><th>lineup</th><th>Actions</th><th>Pending</th>
 				</tr>
-				<tr is="roster-list" v-for="(player, index) in players" v-bind:row="player" v-bind:header="headers" v-on:toggle="togglePlayer(index)"></tr>
+				<tr is="roster-list" v-for="(player, index) in players" v-bind:row="player" v-bind:header="headers" v-bind:range="range" v-on:toggle="togglePlayer(index)"></tr>
 				<tr>
 					<td></td><td></td><td></td><td></td>
 					<td>{{ aggregator }}</td>
@@ -66,9 +125,7 @@
 
 		<div id="allPlayers">
 			<h3>All Players</h3>
-			<p>Choose two consecutive players to add or drop a player from your roster.</p>
-			<button id="scouting-button" onclick="openScoutingModule();">Scouting Reports</button>
-			<br>
+			<p>Choose two consecutive players to add or drop a player from your roster. Click a player to see their stats.</p>
 			<br>
 			<table>
 				<th>Ward <br><button v-on:click="ordering(0)">sort</button></th>
@@ -82,6 +139,8 @@
 				<th>Pending</th>
 				<tr is="player-list" v-for="(player, index) in players" v-bind:row="player" v-bind:header="headers" v-bind:range="range" v-on:acquire="acquirePlayer(index)"></tr>
 			</table>
+		</div>
+
 		</div>
 
 		<!-- script -->
