Loading screen on scores page

--- a/app/live.html
+++ b/app/live.html
@@ -68,12 +68,26 @@
 				margin-bottom: 15px;
 			}
 
+			div#score-page {
+				display: none;
+				padding: 20px;
+			}
+
 		</style>
 
 	</head>
 	<body>
 		
 		<!-- Header -->
+
+		<div id="loading" class="loading">
+			<div>
+				<img src="../assets/logo-white.png">
+			</div>
+			<h1>Loading Fantasy Civics...</h1>
+		</div>
+
+		<div id="score-page">
 
 		<h1>Fantasy Civics<a id="back-button" href="roster.html"><button>Back</button></a></h1>
 
@@ -111,6 +125,8 @@
 			</div>
 
 		</section>
+
+		</div>
 
 		<!-- Footer -->
 
