--- a/app/roster.html
+++ b/app/roster.html
@@ -28,49 +28,6 @@
 				cursor: pointer;
 			}
 
-			div#loading {
-				position: absolute;
-				top: 0;
-				left: 0;
-				width: 100vw;
-				height: 100vh;
-				background: rgba(44, 140, 153, 1);
-				color: white;
-				/* Center Vertically */
-				display: flex;
-				flex-direction: column;
-				justify-content: center;
-				resize: vertical;
-			}
-
-			@keyframes LoadingPulse {
-				0% {
-					width: 25vh;
-				}
-				50% {
-					width: 30vh;
-				}
-				100% {
-					width: 25vh;
-				}
-			}
-
-			div#loading div {
-				height: 35vh;
-				/* Center Vertically */
-				display: flex;
-				flex-direction: column;
-				justify-content: center;
-				resize: vertical;
-			}
-
-			div#loading div img {
-				width: 50vw;
-				display: block;
-				margin: 0 auto;
-				animation: LoadingPulse 2s infinite;
-			}
-
 			div#roster-page {
 				display: none;
 				padding: 20px;
@@ -80,7 +37,7 @@
 	</head>
 	<body>
 
-		<div id="loading">
+		<div id="loading" class="loading">
 			<div>
 				<img src="../assets/logo-white.png">
 			</div>
