--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
 		<div class="center-horizontal">
 			<div class="splash-pane">
 				<h1>Fantasy Civics</h1>
-				<p class="center-text">Fantasy Civics is a Fantasy Football-style game to encourage players to learn more about wards and alderman in Chicago.</p>
+				<p class="center-text">Fantasy Civics is a Fantasy Football-style game to encourage players to learn more about wards and aldermen in Chicago.</p>
 				<button class="cta-btn play-game">Sign Up</button>
 			</div>
 			<div class="splash-pane">
