--- a/app/live.html
+++ b/app/live.html
@@ -89,7 +89,7 @@
 
 		<div id="score-page">
 
-		<h1>Fantasy Civics<a id="back-button" href="roster.html"><button>Back</button></a></h1>
+		<h1>Fantasy Civics<a id="back-button" href="lobby.html"><button>Back</button></a></h1>
 
 		<div id="message-container">
 			<p><span id="message"></span> <span id="close-message">[Close]</span></p>
