--- a/app/lobby.html
+++ b/app/lobby.html
@@ -9,6 +9,11 @@
 		<script type="text/javascript" src="../assets/moment.min.js"></script>
 		<script type="text/javascript" src="../assets/jquery-3.1.1.min.js"></script>
 		<link href="https://fonts.googleapis.com/css?family=Roboto:400,900" rel="stylesheet">
+		<!-- Vex Assets -->
+		<script type="text/javascript" src="../assets/vex.combined.min.js"></script>
+		<script type="text/javascript">vex.defaultOptions.className = 'vex-theme-plain';</script>
+		<link rel="stylesheet" type="text/css" href="../assets/vex.css">
+		<link rel="stylesheet" type="text/css" href="../assets/vex-theme-plain.css">
 		<link rel="stylesheet" type="text/css" href="reset.css">
 		<link rel="stylesheet" type="text/css" href="temp-style.css">
 		<style>
@@ -19,6 +24,19 @@
 
 			div#message-container {
 				display: none;
+			}
+
+			div#league-players {
+			}
+
+			div#league-players div {
+				display: block;
+				margin: 10px 0;
+			}
+
+			div#league-players div div, div#league-players div button {
+				display: inline-block;
+				margin: 10px;
 			}
 
 		</style>
@@ -43,6 +61,7 @@
 
 			<div>
 				<h2>League Lobby</h2>
+				<p id="week-status"></p>
 				<div id="league-players"></div>
 			</div>
 
