Link up join page to lobby

--- a/app/lobby.html
+++ b/app/lobby.html
@@ -85,7 +85,9 @@
 
 			<div class="page-section">
 				<h2>Past Matches</h2>
-				<div id="past-matches"></div>
+				<div id="past-matches">
+					<p>Coming Soon...</p>
+				</div>
 			</div>
 
 		</section>
