Show loading screen after joining

--- a/app/join.html
+++ b/app/join.html
@@ -30,12 +30,25 @@
 				display: none;
 			}
 
+			div#loading {
+				display: none;
+			}
+
 		</style>
 
 	</head>
 	<body>
 		
 		<!-- Header -->
+
+		<div id="loading" class="loading">
+			<div>
+				<img src="../assets/logo-white.png">
+			</div>
+			<h1>Waiting for your league to start...</h1>
+		</div>
+
+		<div id="creator-join-page">
 
 		<h1>Fantasy Civics</h1>
 
@@ -70,6 +83,8 @@
 			<button id="back-app">Back</button>
 
 		</section>
+
+		</div>
 
 		<!-- Footer -->
 
