Implement redirect to main login page

--- a/app/index.html
+++ b/app/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>Requests</title>
+		<title>Fantasy Civics</title>
 
 
 		<script src="https://www.gstatic.com/firebasejs/3.6.9/firebase.js"></script>
@@ -13,11 +13,20 @@
 		<link href="https://fonts.googleapis.com/css?family=Roboto:400,900" rel="stylesheet">
 		<link rel="stylesheet" type="text/css" href="reset.css">
 		<link rel="stylesheet" type="text/css" href="temp-style.css">
+		<style type="text/css">
+			
+		.hide {
+			display: none;
+		}
+
+		</style>
 	</head>
 	<body>
 		<!-- Header -->
 		
 		<h1>Fantasy Civics</h1>
+
+		<div class="hide">
 		<p>Insert splash page, and fancy stuff</p>
 
 		<!-- Contents -->
@@ -32,6 +41,7 @@
 			<p id="name"></p>
 			<!-- <img id="image" style="width:64px;height:64px;" alt="No Image"></img> -->
 			<button id="logout" onclick="app.userLogout()">Logout</button>
+		</div>
 		</div>
 		
 		<h2>Login</h2>
