Add big scoreboard

--- a/app/live.html
+++ b/app/live.html
@@ -72,6 +72,19 @@
 				display: none;
 				padding: 20px;
 			}
+			
+			div.big-score {
+				text-align: center;
+			}
+
+			div.big-score h1 {
+				display: inline-block;
+				margin: 0 50px;
+				width: 100px;
+				height: 100px;
+				line-height: 100px;
+				text-align: center;
+			}
 
 		</style>
 
