--- a/app/live.html
+++ b/app/live.html
@@ -97,12 +97,12 @@
 			<div>
 				<img src="../assets/logo-white.png">
 			</div>
-			<h1>Loading Fantasy Civics...</h1>
+			<h1>Loading Your Match...</h1>
 		</div>
 
 		<div id="score-page">
 
-		<h1>Fantasy Civics<a id="back-button" href="lobby.html"><button>Back</button></a></h1>
+		<h1>Fantasy Civics<a id="back-button" href="lobby.html?ready=true"><button>Back</button></a></h1>
 
 		<div id="message-container">
 			<p><span id="message"></span> <span id="close-message">[Close]</span></p>
