--- a/app/roster.html
+++ b/app/roster.html
@@ -45,7 +45,7 @@
 			<div>
 				<img src="../assets/logo-white.png">
 			</div>
-			<h1>Loading Fantasy Civics...</h1>
+			<h1>Loading Your Roster...</h1>
 		</div>
 
 		<div id="roster-page">
@@ -127,7 +127,7 @@
 				var leagueid = localStorage.getItem('leagueid');
 				var uParts = document.location.pathname.split('/');
 				var pathname = uParts.slice(0, uParts.length - 1).join('/');
-				var url = document.location.origin + pathname + '/lobby.html?leagueid=' + leagueid;
+				var url = document.location.origin + pathname + '/lobby.html?leagueid=' + leagueid + '&ready=true';
 				document.location = url;
 			}
 
