Add sample rodent scoring systems

--- a/scoring.html
+++ b/scoring.html
@@ -109,7 +109,7 @@
 
 		<div id="loading" class="loading">
 			<div>
-				<img src="../assets/logo-white.png">
+				<img src="./assets/logo-white.png">
 			</div>
 			<h1>Loading the Scoring Simulator...</h1>
 		</div>
