Add scoring breakdowns

--- a/scoring.html
+++ b/scoring.html
@@ -95,9 +95,13 @@
 			margin: 20px auto;
 		}
 
-		h1, h2, h3 {
+		h1, h2, h3, h4 {
 			margin: 20px;
 			text-align: center;
+		}
+
+		.scoring-breakdown table {
+			width: 100%;
 		}
 
 		</style>
