Add custom roster view and events

--- a/play.html
+++ b/play.html
@@ -105,7 +105,9 @@
 		}
 
 		.big-logo img {
-			
+			width: 200px;
+			display: block;
+			margin: 10px auto;
 		}
 
 		</style>
@@ -116,14 +118,16 @@
 		<!-- Header -->
 
 		<div id="loading" class="loading">
-			<div class="big-logo">
-				<img src="./assets/logo-color.png">
+			<div>
+				<img src="./assets/logo-white.png">
 			</div>
 			<h1>Loading the Scoring Simulator...</h1>
 		</div>
 
 		<div>
-			<img src="./assets/logo-white.png">
+			<div class="big-logo">
+				<img src="./assets/logo-color.png">
+			</div>
 		</div>
 
 		<div class="compare-roster">
