Fix loading on join page

--- a/app/app.html
+++ b/app/app.html
@@ -34,7 +34,7 @@
 		</div>
 
 		<h2>Create Leagues</h2>
-		<a href="join.html"><button>Create a New League</button></a>
+		<a href="join.html?startleague=true"><button>Create a New League</button></a>
 
 		<h2>Current Leagues</h2>
 		<div id="userLeagues">
